--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: MadLife
 subtitle: 
 description: 自律成就自我
 keywords:
-author: Yongchi
+author: Yongchi | 粤ICP备19044639号
 language: zh-Hans
 timezone:
 
