--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -107,7 +107,7 @@ navbar:
     - { key: 'category', link: '/categories/', icon: 'iconfont icon-category-fill' }
     - { key: 'tag', link: '/tags/', icon: 'iconfont icon-tags-fill' }
     - { key: 'about', link: '/about/', icon: 'iconfont icon-user-fill' }
-    #- { key: 'links', link: '/links/', icon: 'iconfont icon-link-fill' }  # 友链页，把前面#去掉即可展示
+    - { key: 'links', link: '/links/', icon: 'iconfont icon-link-fill' }  # 友链页，把前面#去掉即可展示
 
 search: # 搜索栏
   enable: true
@@ -367,20 +367,20 @@ links:
   subtitle:  # 打字机内容
   items:  # intro 与 image 可省略
     - {
-      title: 'Fluid Docs',
-      intro: '主题使用指南',
-      link: 'https://hexo.fluid-dev.com/docs/',
-      image: '/img/favicon.png'
+      title: '欢迎互相添加友链',
+      intro: '请联系：ychuang92@foxmail.com',
+      link: 'huangyongchi.com',
+      image: 'https://s1.ax1x.com/2020/06/30/N5616f.jpg'
     }
     - {
-      title: 'Fluid Repo',
-      intro: '主题 GitHub 仓库',
-      link: 'https://github.com/fluid-dev/hexo-theme-fluid',
-      image: '/img/favicon.png'
+      title: 'BORBER ',
+      intro: '世俗为枷锁 世人皆自缚',
+      link: 'https://borber.cn/',
+      image: 'https://s1.ax1x.com/2020/06/30/N5rk6S.png'
     }
     - {
-      title: 'Fluid Example',
-      intro: '主题操作示例',
-      link: 'https://hexo.fluid-dev.com/docs/example/',
-      image: '/img/favicon.png'
+      title: '码码呼呼',
+      intro: '?之大护法',
+      link: 'https://todebug.com/',
+      image: 'https://avatars3.githubusercontent.com/u/9302617?s=460&u=9aec8e50d11f4d5337433ad5e49c8ad974f15494&v=4'
     }
